--- a/source/directions.html
+++ b/source/directions.html
@@ -132,21 +132,21 @@
         </dl>
         <ul class="page-header__social-list social-list">
           <li class="social-list__item">
-            <a class="icon icon__social" href="https://www.facebook.com/htmlacademy">
+            <a class="icon social-list__icon" href="https://www.facebook.com/htmlacademy">
               <svg class="social-list__facebook" width="11" height="21">
                 <use xlink:href="img/sprite.svg#facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social-list__item">
-            <a class="icon icon__social" href="https://vk.com/htmlacademy">
+            <a class="icon social-list__icon" href="https://vk.com/htmlacademy">
               <svg class="social-list__vk" width="23" height="12">
                 <use xlink:href="img/sprite.svg#vk"></use>
               </svg>
             </a>
           </li>
           <li class="social-list__item">
-            <a class="icon icon__social" href="https://www.instagram.com/htmlacademy">
+            <a class="icon social-list__icon" href="https://www.instagram.com/htmlacademy">
               <svg class="social-list__instagramm" width="18" height="18">
                 <use xlink:href="img/sprite.svg#instagram"></use>
               </svg>
@@ -1220,7 +1220,7 @@
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.png 1x, img/logo-medium-dark@2x.png 2x"
             type="image/png">
           <source srcset="img/logo-mobile-dark.webp 1x, img/logo-mobile-dark@2x.webp 2x" type="image/webp">
-          <img class="page-fotter__logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
+          <img class="page-footer__logo" src="img/logo-mobile-dark.png" srcset="img/logo-mobile-dark@2x.png 2x"
             width="226" height="30" alt="Логотип" />
         </picture>
       </a>
