--- a/source/directions.html
+++ b/source/directions.html
@@ -18,7 +18,7 @@
   <header
     class="page-header page-header--border-radius page-header--height page-header--light-theme page-header--menu-opened">
     <div class="container page-header__menu  menu">
-      <a href="index.html" class="menu__logo-mobile visually-hidden">
+      <a href="#" class="menu__logo-mobile visually-hidden">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo.webp 1x, img/logo@2x.webp 2x" type="image/webp">
           <source media="(min-width: 1440px)" srcset="img/logo.png 1x, img/logo@2x.png 2x" type="image/png">
@@ -31,7 +31,7 @@
             height="30" alt="Логотип" />
         </picture>
       </a>
-      <a href="index.html" class="menu__logo-mobile-dark">
+      <a href="#" class="menu__logo-mobile-dark">
         <picture>
           <source media="(min-width: 768px)" srcset="img/logo-medium-dark.webp 1x, img/logo-medium-dark@2x.webp 2x"
             type="image/webp">
@@ -158,7 +158,7 @@
     <div class="page-header__caption container">
       <span class="text">Направления</span>
     </div>
-    <svg class="page-header__underline page-header_underline--directions visually-hidden" width="358" height="8">
+    <svg class="page-header__underline page-header__underline--directions visually-hidden" width="358" height="8">
       <use xlink:href="img/sprite.svg#horizontal-line"></use>
     </svg>
   </header>
@@ -205,28 +205,28 @@
             <ul class="user-info__list transport-list">
               <li class="transport-list__item">
                 <button class="user-info__transport-button button button--togle button--light-theme" type="button">
-                  <svg class="user-info__icon icon--active" width="18" height="20">
+                  <svg class="user-info__icon icon icon--active" width="18" height="20">
                     <use xlink:href="img/sprite.svg#plain"></use>
                   </svg>
                 </button>
               </li>
               <li class="transport-list__item">
                 <button class="user-info__transport-button button button--togle button--light-theme" type="button">
-                  <svg class="user-info__icon icon--active" width="18" height="21">
+                  <svg class="user-info__icon icon icon--active" width="18" height="21">
                     <use xlink:href="img/sprite.svg#bus"></use>
                   </svg>
                 </button>
               </li>
               <li class="transport-list__item">
                 <button class="user-info__transport-button button button--togle button--light-theme" type="button">
-                  <svg class="user-info__icon icon--disabled" width="25" height="24">
+                  <svg class="user-info__icon icon icon--disabled" width="25" height="24">
                     <use xlink:href="img/sprite.svg#bicycle"></use>
                   </svg>
                 </button>
               </li>
               <li class="transport-list__item">
                 <button class="user-info__transport-button button button--togle button--light-theme" type="button">
-                  <svg class="user-info__icon icon--active" width="21" height="24">
+                  <svg class="user-info__icon icon icon--active" width="21" height="24">
                     <use xlink:href="img/sprite.svg#walk"></use>
                   </svg>
                 </button>
@@ -384,7 +384,7 @@
                 <div class="step-list__child">
                   <input id="children" class="checkbox checkbox--border checkbox--large" name="children"
                     type="checkbox" />
-                  <label for="children" class="user-info__checkbox-text checkbox__text text">Можно с детьми</label>
+                  <label for="children" class="user-info__checkbox-text text">Можно с детьми</label>
                 </div>
               </div>
               <div class="step-list__date">
@@ -1105,7 +1105,7 @@
                   </a>
                   <a href="#step1"
                     class="add-plans__button-step step-list__previous button button--transparent-theme add-plans__button-step--previous">
-                    <svg class="add-plans__back icon--active" width="10" height="18">
+                    <svg class="add-plans__back icon icon--active" width="10" height="18">
                       <use xlink:href="img/sprite.svg#arrow-left-thick"></use>
                     </svg>
                     <span class="step-list__step-back-caption button__caption">На шаг назад</span>
@@ -1194,7 +1194,7 @@
                 </button>
                 <a href="#step2"
                   class="add-plans__button-step step-list__previous button button--transparent-theme add-plans__button-step--previous">
-                  <svg class="add-plans__back icon--active" width="10" height="18">
+                  <svg class="add-plans__back icon icon--active" width="10" height="18">
                     <use xlink:href="img/sprite.svg#arrow-left-thick"></use>
                   </svg>
                   <span class="button__caption">НА ШАГ НАЗАД</span>
@@ -1226,23 +1226,27 @@
       </a>
       <ul class="page-footer__socials social-list">
         <li class="page-footer__social-item social-list__item">
-          <a class="icon icon--dark-blue" href="https://www.facebook.com/htmlacademy">
-            <svg class="page-fotter__icon icon icon--background-padding icon--main-background" width="20" height="20">
+          <a class="link" href="https://www.facebook.com/htmlacademy">
+            <svg
+              class="icon icon--dark-blue icon--footer-background-padding icon--background-padding icon--main-background"
+              width="20" height="20">
               <use xlink:href="img/sprite.svg#facebook"></use>
             </svg>
           </a>
         </li>
         <li class="page-footer__social-item social-list__item">
-          <a class="icon icon--dark-blue" href="https://vk.com/htmlacademy">
-            <svg class="page-fotter__icon icon icon--background-padding icon--dark-blue icon--main-background"
+          <a class="link" href="https://vk.com/htmlacademy">
+            <svg
+              class="icon icon--footer-background-padding icon--background-padding icon--dark-blue icon--main-background"
               width="20" height="20">
               <use xlink:href="img/sprite.svg#vk"></use>
             </svg>
           </a>
         </li>
         <li class="page-footer__social-item social-list__item">
-          <a class="icon icon--dark-blue" href="https://www.instagram.com/htmlacademy">
-            <svg class="page-fotter__icon icon--background-padding icon--main-background" width="20" height="20">
+          <a class="ilink" href="https://www.instagram.com/htmlacademy">
+            <svg class="icon icon--footer-background-padding icon--background-padding icon--main-background" width="20"
+              height="20">
               <use xlink:href="img/sprite.svg#instagram"></use>
             </svg>
           </a>
