--- a/source/companions.html
+++ b/source/companions.html
@@ -1798,7 +1798,7 @@
   <footer class="page-footer">
     <div class="page-footer__container container">
       <h2 class="visually-hidden">Погнали?</h2>
-      <a href="#">
+      <a href="index.html">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo-large-dark.webp 1x, img/logo-large-dark@2x.webp 2x"
             type="image/webp">
@@ -1842,9 +1842,9 @@
         </li>
       </ul>
       <div class="page-footer__developed">
-        <a class="link" href="https://htmlacademy.ru/intensive/adaptive">
+        <a class="page-footer__link link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="page-footer__developed-caption text text--default">Разработано</span>
-          <svg class="page-footer__logo icon icon--dark-blue" width="27" height="34">
+          <svg class="page-footer__developed-logo icon icon--dark-blue" width="27" height="34">
             <use xlink:href="img/sprite.svg#logo"></use>
           </svg>
         </a>
