--- a/source/index.html
+++ b/source/index.html
@@ -916,9 +916,9 @@
         </li>
       </ul>
       <div class="page-footer__developed">
-        <a class="link" href="https://htmlacademy.ru/intensive/adaptive">
+        <a class="page-footer__link link" href="https://htmlacademy.ru/intensive/adaptive">
           <span class="page-footer__developed-caption text text--default">Разработано</span>
-          <svg class="page-footer__logo icon icon--dark-blue" width="27" height="34">
+          <svg class="page-footer__developed-logo icon icon--dark-blue" width="27" height="34">
             <use xlink:href="img/sprite.svg#logo"></use>
           </svg>
         </a>
